finalized website layout

--- a/turnstile-webpage/.firebaserc
+++ b/turnstile-webpage/.firebaserc
@@ -8,6 +8,7 @@
     "dynamic fonts": "hmc-turnstile",
     "graph resizing": "hmc-turnstile",
     "home text width": "hmc-turnstile",
-    "color coded buttons": "hmc-turnstile"
+    "color coded buttons": "hmc-turnstile",
+    "minimum viable product": "hmc-turnstile"
   }
 }
