tested getting value every 5 seconds

--- a/turnstile-webpage/.firebaserc
+++ b/turnstile-webpage/.firebaserc
@@ -9,6 +9,7 @@
     "graph resizing": "hmc-turnstile",
     "home text width": "hmc-turnstile",
     "color coded buttons": "hmc-turnstile",
-    "minimum viable product": "hmc-turnstile"
+    "minimum viable product": "hmc-turnstile",
+    "demoTest": "hmc-turnstile"
   }
 }
